tests/baselines/reference/parserStrictMode1.errors.txt
==== tests/cases/compiler/parserStrictMode1.ts (4 errors) ====
    foo1();
    ~~~~
!!! parserStrictMode1.ts(1,1): error TS2095: Cannot find name 'foo1'.
    foo1();
    ~~~~
!!! parserStrictMode1.ts(2,1): error TS2095: Cannot find name 'foo1'.
    foo1();
    ~~~~
!!! parserStrictMode1.ts(3,1): error TS2095: Cannot find name 'foo1'.
    static();
    ~~~~~~
!!! parserStrictMode1.ts(4,1): error TS2095: Cannot find name 'static'.